// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`authModal is rendered when hasModal is true 1`] = `
<aside
  className="root"
  onKeyDown={[Function]}
  onTransitionEnd={[Function]}
  tabIndex={-1}
>
  <header
    className="header"
  >
    <i />
  </header>
  <div
    className="body_masked"
    style={
      Object {
        "display": "block",
      }
    }
  >
    <i />
  </div>
  <div
    className="footer"
  >
    <div
      className="switchers"
    >
      StoreSwitcher
      CurrencySwitcher
    </div>
    <i />
  </div>
  <div
    className="modal_open"
  >
    <LoadingIndicator />
  </div>
</aside>
`;

exports[`renders correctly when closed 1`] = `
<aside
  className="root"
  onKeyDown={[Function]}
  onTransitionEnd={[Function]}
  tabIndex={-1}
>
  <header
    className="header"
  >
    <i />
  </header>
  <div
    className="body"
    style={
      Object {
        "display": "block",
      }
    }
  >
    <i />
  </div>
  <div
    className="footer"
  >
    <div
      className="switchers"
    >
      StoreSwitcher
      CurrencySwitcher
    </div>
    <i />
  </div>
  <div
    className="modal"
  />
</aside>
`;

exports[`renders correctly when open 1`] = `
<aside
  className="root_open"
  onKeyDown={[Function]}
  onTransitionEnd={[Function]}
  tabIndex={-1}
>
  <header
    className="header"
  >
    <i />
  </header>
  <div
    className="body"
    style={
      Object {
        "display": "block",
      }
    }
  >
    <i />
  </div>
  <div
    className="footer"
  >
    <div
      className="switchers"
    >
      StoreSwitcher
      CurrencySwitcher
    </div>
    <i />
  </div>
  <div
    className="modal"
  />
</aside>
`;
